starter_code/stylesheets/style.css
/* Mobile First Styles */
/* Iteration 1 | Extra Small Screen (width < 768px) */

body {
    font-family: 'Font Awesome\ 5 Brands';
    font-weight: 400;
    font-size: 16px; 
}

/* Font settings */

h1 {
  font-size: 2.7rem;
}
  
h2 {
  font-size: 2rem;
}
    
p {
  font-size: 1.2rem;
}


/* NavTop Styles */

nav {
  border-bottom: 1px solid #5b5e6d;
  border-top: 1px solid #5b5e6d;
  position: sticky;
  z-index: 5;
  top: 0;
  background-color: #ffffff;
}

.flex-container {
    display: flex;
    width: 100vw;
    align-items: center;
    justify-content: center;
} 

.flex-container-ul {
  display: flex;
  width: 100vw;
  align-items: center;
  justify-content: right;
  margin-right: 30px;
} 

nav > img {
    height: 50px;
    margin-left: 30px;
    padding: 10px 0;
}

nav ul li {
  display: inline-block;
  font-size: 10px; 
  /* Hidden element to improve better positions of it's siblings */
  visibility: hidden;
  color: #5b5e6d;
}

ul {
  list-style: none;
}

.fa-solid {
    color: #2C303F; 
    font-size: 30px;
    margin-right: 30px;
}


/* Header Styles */

.flex-container-col {
  display: flex;
  flex-direction: column;
  width: 100vw;
  align-items: center;
  justify-content: center;
  line-height:1;
}

.flex-container-sub{
  display: flex;
  flex-direction: column;
}

header > h1{
  width: 65%;
  margin-right: 15%;
}

header > img{
  width: 80vw;
  padding-top: 40px;
}

#fistHeaderPara{
  margin-top: 0;
  margin-bottom: 30px;
  width: 80vw;
}

/* header > button | GET STARTED{ */
.buttonstyle{ 
  width: 80vw;
  background-color: #192592;
  color: white;
  padding: 20px 30px;
  border: none;
  font-size: 1rem;
  border-radius: 5px;
  margin-top: 10px;
}

.buttonstyle2{ 
  margin-bottom: 30px;
  margin-top: 10px;
}

.email{
  width: 79vw;
  padding-top: 20px;
  padding-bottom: 15px;
  margin: 10px 0 10px 0;
  border: rgb(160, 160, 160) solid 1px;
}

input,
input::-webkit-input-placeholder {
    line-height: 1.5;
    font-size: 1.1rem;
    text-align: left;
}

#p-link{
  margin-top: 1rem;
  text-align: center;
  font-size: 1.4rem;
}

h1{
  margin-top: 40px;
  color: #2C303F; 
  font-weight: bold;
}

p{
  color: #5b5e6d;
  line-height: 1.3;
}

/* Main Styles */

h2{
  color: #2C303F; 
  margin-top: 50px;
}

main{
  width: 100vw;
}

.flex-container-sub2{
  width: 100%;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  align-items:stretch;
}

main > div  div {
  width: 100vw;
} 

.img-resize{
  height: 13vh;
  padding: 4vh 30vw;
  border-bottom: 1px solid rgb(160, 160, 160);
  box-sizing: border-box;
}

.img-resize4{
  padding: 4vh 15vw;
}

.img-resize5{
  padding: 5vh 32vw;
}

.img-resize6{
  padding: 5vh 20vw;
}

main > div > p{
  margin-top: 1px;
  width: 80vw;
}

main > div:first-child{
  background-color: #F4F3F4;
}

/* main > button | DISCOVER WHY STARTED{ */
.buttonStyleMain{ 
  background-color: white;
  color: #192592;
  border: 1px solid #192592;
  font-weight: bold;
  margin-bottom: 50px;
}

main > div > p{
  text-align: center;
  margin-top: 0px;

}

main > div > div p{
  text-align: center;
  margin-top: 0px;
}


hr{
  margin: 20px auto 30px auto;
  width: 100%;
  border-right : 0;
  border-left: 0;
  border: 1px solid rgb(223, 223, 223);
}

#h2style{
  font-size: 1.7rem;
  font-weight: bold;
  margin-top: 60px;
  line-height: 0;
}

.fstyle{
  font-size: 1.2rem;
  font-weight: bold;
  padding-top: 10px;
  color: grey;
}

.flex-container-col2{
  display: flex;
  flex-direction: column;
  width: 100vw;
  align-items: center;
  justify-content: center;
  line-height:1;
}

.flex-container-col3,
.flex-container-sub3{
  display: flex;
  flex-direction: column;
  width: 100vw;
  align-items: center;
  justify-content:center;
} 

/* Footer Styles */

.flex-containerr2 {
  display: flex;
  flex-wrap: wrap;
  width: 100vw;
  color: grey;
  font-size: 1.1rem;
}

.flex-containerr2 > ul {
  width: 30%;
}

footer div ul {
  line-height: 2;
}

footer .flex-container4{
  background-color: #F4F3F4;
  width: 100vw;
}

.flex-container4{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.flex-container4 > ul{
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.flex-container4 > ul li {
  font-size: 1.1rem;
  font-weight: bolder;
  color: grey;
  padding: 5px 5px;
  margin-right: 15px;
}

#flatresize{
  height: 25px;
}

#foot-iconds{
  text-align: center;
  width: 150px;
}

.flex-container5 > span{
  padding: 15px;
  color: grey;
  font-size: 1.1rem;
  font-weight: bolder;
 } 

.flex-container5 {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: center;
}

footer > div > img {
  height: 140px;
  margin-right: 600px;
}

.fab{
  padding: 12px;
  margin-bottom: 30px;
  color: #5b5e6d;
}


/* Break Points */

/* Iteration 2 | Small Screen (961px > width > 767px) */
/* Media query will be invoked when resolutions is smaller than 962px and bigger than 766*/

 @media screen and (min-width: 768px) { 
 
    .flex-container-col{
      width: 100%;
      align-items: stretch;
      flex-wrap: wrap;
    }

    header > h1{
      width: 90%;
      font-size: 4.7rem;
      align-self: left;
      margin-left: 50px;
    }

    .email{
      margin-left: 50px;
      width: 40vw;
      padding: 20px 10px;
      border: rgb(160, 160, 160) solid 1px;
    }

    #fistHeaderPara{
      margin-left: 50px;
      font-size: 1.5rem;
      width: 90%;
    }

    #p-link{
      margin-left: 50px;
      text-align: left;
    }

    button.buttonstyle {
      margin-left: 10px;
      width: 25vw;
      display: inline-block;
      padding: 25px 40px;
    }

    header > img{
      width: 50vw;
      align-self: center;
    }
    
    .flex-container-sub{
      display: flex;
      flex-direction: row;
      justify-items:flex-start;
      align-items: baseline;
    }

    .flex-container-sub2{
      width: 100vw;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: center;
      align-items: center;
      align-content: stretch;
      align-items: stretch;
      box-sizing: border-box;
    }

    .flex-container-sub2 img{
      width: 50vw;
      border-bottom: 1px solid rgb(160, 160, 160);
      height: 15vh;
      box-sizing: border-box;
    }
       
     .img-resize{
      height: 15vh;
      border-bottom: 1px solid rgb(160, 160, 160);
      box-sizing: border-box;
    }

    .img-resize1{
      padding: 5vh 15vw;
      border-right: 1px solid rgb(160, 160, 160);
    }
    
    .img-resize2{
      padding: 5vh 15vw;
      border-right: none;
    }
    
    .img-resize3{
      padding: 5vh 15vw;
      border-right: 1px solid rgb(160, 160, 160);
    }
    .img-resize4{
      padding: 5vh 7vw;
      border-right: none;
    }
    
    .img-resize5{
      padding: 6vh 15vw;
      border-right: 1px solid rgb(160, 160, 160);
    }
    
    .img-resize6{
      padding: 6vh 10vw;
      border-right: none;
    } 

    .flex-container-col3 {
      display: flex;
      flex-direction: row;
      width: 100vw;
      justify-content:center;
      align-items: baseline;
    } 

    .flex-container-sub3{
      width: 38vw;
      display: flex;
      flex-direction: column;
      align-items: flex-start;
    } 
        
    .email2{
      width: 25vw;
    } 

    .flex-containerr2 {
      display: flex;
      flex-wrap: wrap;
      width: 100vw;
      color: grey;
      font-size: 1.1rem;
      align-items:flex-start;
      align-content:flex-start;
      justify-content: space-evenly;
    }
    
    .flex-containerr2 > ul {
      width: 12%;
    }

    footer > div > img {
      margin: 0px; 
    }

    .flex-container4{
      display: flex;
      flex-direction: row;
      align-items: baseline;
      align-content:center;
      justify-content: space-between;
    }

    .flex-container5 {
      display: flex;
      flex-wrap: nowrap;
      align-items: center;
      justify-content: center;
      width: 15vw;
    }

    #flatresize{
      margin-left: 10vw;
    }

    footer > div > div > img {
      margin-right: 5vw;
    }
    
}

/* Iteration 3 | Medium Screen (1024px > width > 960px) */
/* Media query will be invoked when resolutions is smaller than 962px and bigger than 766*/

@media screen and (min-width: 961px){
  
  .flex-container-sub2 img{
    width: 33vw;
   }
     
  .img-resize1{
    padding: 5vh 10vw;
    border-right: 1px solid rgb(160, 160, 160);
  }
  
  .img-resize2{
    padding: 5vh 10vw;
    border-right: none;
    border-right: 1px solid rgb(160, 160, 160);
  }
  
  .img-resize3{
    padding: 5vh 10vw;
  }
  .img-resize4{
    padding: 5vh 4vw;
    border-right: none;
    border-right: 1px solid rgb(160, 160, 160);
  }
  
  .img-resize5{
    padding: 6vh 10vw;
    border-right: 1px solid rgb(160, 160, 160);
  }
  
  .img-resize6{
    padding: 5vh 6vw;
    border-right: none;
  } 
}

/* Iteration 4 | Largue Screen */
@media screen and (min-width: 1201px){

  nav ul {
    align-self: right;
    display: inline-block;
  }
    
  nav ul li {
    visibility: visible;
    font-size: 1.2rem;
    padding: 10px 10px;
    line-height: bold;
    align-self: right;
  }

  nav ul li:last-child {
    border: 1px solid rgb(160, 160, 160);
    margin-left: 30px;
  }

  .flex-container {
    align-items: center;
    justify-content: center;
  } 

  header > img{
    width: 50vw;
    padding-top: 40px;
  }

}

